# StellarTip-Contract

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  deny.toml  lefthook.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
docs/: ADMIN_RUNBOOK.md  API_REFERENCE.md  ARCHITECTURE.md  client-failure-handling.md  front-running.md  static-analysis-findings.md  tutorial.md
examples/: README.md
examples/python/: register_and_tip.py
examples/rust/: Cargo.toml
examples/rust/src/: lib.rs
examples/typescript/: register-and-tip.ts
scripts/: capture-snapshot.sh  deploy.sh  interact.sh  start-testnet.sh  verify.sh
src/: fixtures.rs  fuzz.rs  lib.rs  test.rs
test_snapshots/: test_e2e_multiple_creators.1.json  test_e2e_multiple_tokens.1.json  test_e2e_pagination.1.json  test_e2e_pagination.2.json  test_e2e_register_tip_withdraw.1.json  test_e2e_register_unregister.1.json  test_e2e_update_profile.1.json  test_e2e_with_fee.1.json  test_fork_snapshot_roundtrip.1.json
test_snapshots/fuzz/: test_combined_flow.1.json  test_combined_flow.10.json  test_combined_flow.100.json  test_combined_flow.1000.json  test_combined_flow.1001.json  test_combined_flow.1002.json  test_combined_flow.1003.json  test_combined_flow.1004.json  test_combined_flow.1005.json  test_combined_flow.1006.json  test_combined_flow.1007.json  test_combined_flow.1008.json  test_combined_flow.1009.json  test_combined_flow.101.json  test_combined_flow.1010.json  test_combined_flow.1011.json  test_combined_flow.1012.json  test_combined_flow.1013.json  test_combined_flow.1014.json  test_combined_flow.1015.json  test_combined_flow.1016.json  test_combined_flow.1017.json  test_combined_flow.1018.json  test_combined_flow.1019.json  test_combined_flow.102.json  test_combined_flow.1020.json  test_combined_flow.1021.json  test_combined_flow.1022.json  test_combined_flow.1023.json  test_combined_flow.1024.json  test_combined_flow.1025.json  test_combined_flow.1026.json  test_combined_flow.1027.json  test_combined_flow.1028.json  test_combined_flow.1029.json  test_combined_flow.103.json  test_combined_flow.1030.json  test_combined_flow.1031.json  test_combined_flow.1032.json  test_combined_flow.1033.json  (+5436 more)
test_snapshots/test/: test_accept_admin_unauthorized_fails.1.json  test_cancel_admin_transfer.1.json  test_contract_version_is_3.1.json  test_creator_count_tracks_register_and_unregister.1.json  test_error_variants_table.1.json  test_error_variants_table.10.json  test_error_variants_table.11.json  test_error_variants_table.12.json  test_error_variants_table.13.json  test_error_variants_table.2.json  test_error_variants_table.3.json  test_error_variants_table.4.json  test_error_variants_table.5.json  test_error_variants_table.6.json  test_error_variants_table.7.json  test_error_variants_table.8.json  test_error_variants_table.9.json  test_get_tips_pagination.1.json  test_init_emits_event.1.json  test_init_fee_too_high_fails.1.json  test_init_persists_supplied_caps.1.json  test_init_sets_admin_and_fee.1.json  test_init_supplied_caps_rejects_8th_creator.1.json  (+61 more)
tests/: fork.rs
