[package]
name = "stellar-tip"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
# Pinned to 22.0.x: 22.1.x of soroban-env-host pulls ed25519-dalek 2.x whose
# `CryptoRng` requirement is incompatible with the rand_core version resolvable
# here, breaking the testutils build. See #55 imply trail.
soroban-sdk = ">=22.0.0, <22.1"

[dev-dependencies]
soroban-sdk = { version = ">=22.0.0, <22.1", features = ["testutils"] }
proptest = "1.4.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
