[package]
name = "stellar-tip"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
# Pinned to 22.0.x: 22.1.x of soroban-env-host pulls ed25519-dalek 2.x whose
# `CryptoRng` requirement is incompatible with the rand_core version resolvable
# here, breaking the testutils build. See #55 imply trail.
soroban-sdk = ">=22.0.0, <22.1"

[dev-dependencies]
soroban-sdk = { version = ">=22.0.0, <22.1", features = ["testutils"] }
# Direct constraint on the transitive `soroban-env-host`. `Cargo.lock` is
# gitignored in this repo so the resolver can re-grab the broken `22.1.x`
# line on CI without this authoritative pin. Cargo unifies this boundary
# into the normal dep graph, so it also caps the runtime graph even though
# the failing build is only hit via `testutils`.
soroban-env-host = ">=22.0.0, <22.1"
proptest = "1.4.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
